[package]
name = "ryba-kit"
version = "0.1.0"
authors = ["Michael.Ilyin <milyin@gmail.com>"]

[dependencies]
serde = "*"
serde_derive = "*"
serde_json = "*"
rocket = "0.3.2"
rocket_codegen = "0.3.2"
handlebars = "*"
lazy_static = "*"
glob = "*"
itertools = "*"
log = "*"
#rocket = { git = "https://github.com/SergioBenitez/Rocket" }
#rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket" }
