[package]
name = "ryba"
version = "0.1.0"
authors = ["Michael.Ilyin <milyin@gmail.com>"]

[dependencies]
serde="*"
serde_derive="*"
ryba-kit = { path = "../ryba-kit" }
rocket = "0.2.7"
rocket_codegen = "0.2.7"
#rocket = { git = "https://github.com/SergioBenitez/Rocket" }
#rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket" }

[dependencies.rocket_contrib]
version = "0.2.7"
#git = "https://github.com/SergioBenitez/Rocket"
#features = ["handlebars_templates", "tera_templates"]
