[package]
name = "ryba"
version = "0.1.0"
authors = ["Michael.Ilyin <milyin@gmail.com>"]

[dependencies]
serde="*"
serde_derive="*"
ryba-kit = { path = "../ryba-kit" }
ryba-kit-derive = { path = "../ryba-kit-derive" }
rocket = "0.3.2"
rocket_codegen = "0.3.2"
handlebars="*"
lazy_static="*"
#rocket = { git = "https://github.com/SergioBenitez/Rocket" }
#rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket" }

[dependencies.rocket_contrib]
version = "0.3.2"
#git = "https://github.com/SergioBenitez/Rocket"
#features = ["handlebars_templates", "tera_templates"]
